--- a/pages/html/page_avaliacao.html
+++ b/pages/html/page_avaliacao.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/index.js" defer></script>
 
     <title>Página de Avaliação</title>
 </head>
-<body>
+<body onchange="">
 
     <div class="conatiner">
-        <div class="row" style="height: 100px;">
-            <i class="bi bi-star"></i>
+        <div class="row">
+            <i class="material-icons">star</i>
         </div>
     </div>
 
