--- a/pages/html/page_avaliacao.html
+++ b/pages/html/page_avaliacao.html
@@ -17,8 +17,8 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-6">
-                <div class="">
+            <div class="col-6 ">
+                <div class="py-4 px-4">
                     <div class="">
                         <h2 class="display-5">Lorem Ipsum</h2>
                     </div>
