--- a/pages/html/bootstrap-5/page_avaliacao.html
+++ b/pages/html/bootstrap-5/page_avaliacao.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/index.js" defer></script>
+    <link rel="stylesheet" href="/pages/css/page_avaliacao.css">
+    <script src="/pages/js/page_avaliacao.js" defer></script>
 
     <title>Página de Avaliação</title>
 </head>
