Capturando e comparando parametros e valores

--- a/js/getParametros/getParametros.html
+++ b/js/getParametros/getParametros.html
@@ -16,6 +16,10 @@
     <div class="container">
         <div class="row">
 
+            <div class="" id="">
+
+            </div>
+
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -36,13 +40,13 @@
 
             <div class="mb-3">
                 <label for="valor" class="form-label">Valor:</label>
-                <input type="text" class="form-control" id="valor" placeholder="">
+                <input type="text" class="form-control" id="value" placeholder="">
             </div>
 
             <div class="erro text-danger"></div>
 
             <div class="mb-3">
-                <button id="btn-limpar" type="" class="btn btn-primary" onclick="executar()">Executar</button>
+                <button id="btn-executar" type="" class="btn btn-primary" onclick="executar()">Executar</button>
                 <button id="btn-limpar" type="" class="btn btn-primary" onclick="reset()">Limpar</button>
             </div>
 
