--- a/js/getParametros/getParametros.html
+++ b/js/getParametros/getParametros.html
@@ -11,17 +11,32 @@
     <title>Get Parâmetros</title>
 </head>
 
-<body id="body" onload="getParametros(), carregarTablea()">
+<body id="body" onload="getParametros(), carregarTabela()">
 
     <div class="container">
         <div class="row">
 
-            <div class="" id="">
-
-            </div>
-
             <table class="table table-striped">
                 <thead>
+                    <tr>
+                        <th colspan="2">Parâmetros Capturados</th>
+                    </tr>
+                    <tr>
+                        <th>Parâmetro</th>
+                        <th>Valor</th>
+                    </tr>
+                </thead>
+
+                <tbody id="tbody-params-cap"></tbody>
+            </table>
+
+            <hr>
+
+            <table class="table table-striped table-info">
+                <thead>
+                    <tr class="">
+                        <th colspan="2">Coleção de Parâmetros</th>
+                    </tr>
                     <tr>
                         <th>Parâmetro</th>
                         <th>Valor</th>
