--- a/js/showModalParametros/showModalParametros.html
+++ b/js/showModalParametros/showModalParametros.html
@@ -8,42 +8,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="showModalParametros.js" defer></script>
 
-    <style>
-        #modal{
-            backdrop-filter: blur(5px);
-        }
-    </style>
-
     <title>Exibir modal com Parâmetros</title>
 </head>
 
-<body id="body" onload="showModalParameters()">
-
+<body id="body" onload="validationParameters()">
     <div class="container">
         <div class="row">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-            It has survived not only five centuries, but also the leap into electronic typesetting, 
-            remaining essentially unchanged. It was popularised in the 1960s with the release of 
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing 
-            software like Aldus PageMaker including versions of Lorem Ipsum.
         </div>
     </div>
-
-    <div id="modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="meuModalLabel" aria-hidden="true">
+    <div id="modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="meuModalLabel" aria-hidden="true" style="backdrop-filter: blur(5px);">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
+                <div id="modal-header" class="modal-header">
                     <h5 class="modal-title" id="myTitle">Title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-    
                 <div id="modal-body" class="modal-body">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 </div>
-    
-                <div class="modal-footer">
+                <div id="modal-footer" class="modal-footer">
                     <button type="button" class="btn btn-success btn-continue" data-bs-dismiss="modal">Continue</button>
                 </div>
             </div>
